--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-firebase/auth": "^14.2.2",
     "@react-native-firebase/firestore": "^14.2.2",
     "@react-native-firebase/storage": "^14.2.2",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~44.0.2",
@@ -28,6 +30,8 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
