--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     "baseUrl": "./",
     "paths": {
       "@src/*": ["./src/*"],
-      "@components*": ["./src/components/*"],
+      "@components/*": ["./src/components/*"],
       "@screens/*": ["./src/screens/*"],
       "@assets/*": ["./src/assets/*"],
-      "@hooks/*": ["./src/hooks/*"]
+      "@hooks/*": ["./src/hooks/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
